--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <tbody>
     <table>
         <tr>
-            <td><img src="images/bob.jpg" alt="Bobs Burgz" style="width:300px;height:200px"></td>
+            <td><img src="bob.jpg" alt="Bobs Burgz" style="width:300px;height:200px"></td>
             <td>
                 <h1><a href="https://en.wikipedia.org/wiki/Bob%27s_Burgers">Bobs Burgers</a></h1>
                 <p><em> Serving up the best darn </em> <strong> burgers </strong></p>
